website/versioned_docs/version-3.0/dev-introduction.md
---
id: version-3.0-dev-introduction
original_id: dev-introduction
title: Getting Started
---

PrimeHub is a Kubernetes-based cloud-native Machine Learning platform.

We Provide PrimeHub Community and Enterprise installations. Prior to PrimeHub installation, a PrimeHub-ready Kubernetes cluster is required. PrimeHub supports multi-nodes and single-node. 

If you want a Kubernetes in your own way, please see the prerequisites or see guides of starting a fresh Kubernetes on GKE/EKS for PrimeHub. 

Just want to try PrimeHub on the own desktop/laptop? you may want to check the installation on single-node(easy-installation).

If a serious enterprising trial is preferred, please send the [request](https://docs.google.com/forms/d/e/1FAIpQLSe_Z8JfIbYnvhOampGN_XXle4d3GVX04E8evnNI_Py3abth-A/viewform). We will have PrimeHub cloud dedicated to you.


### Katacoda

Before getting hands dirty in real circumstances, we have a [PrimeHub CE installation scenario on Katacoda↗](https://www.katacoda.com/infuseai), it helps understand the installation progress/requirements and what PrimeHub is capable of.

---

## Setup Kubernetes for PrimeHub

Before PrimeHub installation, A Kubernetes cluster is required to meet prerequisites. Make sure your cluster is ready for PrimeHub.

- [Prerequisites](getting_started/prerequisites.md)

If PrimeHub on GKE/EKS is one of your preference, you may want to start from our guides to set up a PrimeHub-ready-Kubernetes:

- [Install Kubernetes on GKE](getting_started/kubernetes_on_gke.md)
- [Install Kubernetes on AWS EKS](getting_started/kubernetes_on_eks)

## Setup PrimeHub

- [Install PrimeHub Community](getting_started/install_primehub_ce)
- [Install PrimeHub Enterprise](getting_started/install_primehub)

### Single Node

- [Install PrimeHub Enterprise on Single Node](getting_started/kubernetes_on_ubuntu_machine)
