website/versioned_docs/version-3.8/dev-introduction.md
---
id: version-3.8-dev-introduction
title: Overview
sidebar_label: Overview
original_id: dev-introduction
---

PrimeHub is a Kubernetes-based cloud-native Machine Learning platform.

We provides various ways of installation depending upon your requirements and resources.

## AWS - One-Click Installation 🚀

With AWS CloudFormation, the distance between you and ready-to-use PrimeHub is just 1-click away; all of you need are an AWS account, 30 minutes and a cup of tea or coffee. Visit [one.primehub.io &neArr;](https://one.primehub.io/) to start it.

Don't have an AWS account? We have other ways for you.



---

## Installation

Here are PrimeHub Community and Enterprise installations.  Prior to PrimeHub installation, a PrimeHub-ready Kubernetes cluster is required. PrimeHub supports both of multi-nodes Kubernetes cluster and single-node MicroK8s cluster.

If you have a Kubernetes in your own way already, please see the prerequisites for having a PrimeHub-ready Kubernetes or see guides of starting a fresh Kubernetes on GKE/EKS for PrimeHub installation.


### Katacoda

Before messing around in real circumstances, we have a [PrimeHub CE installation scenario on Katacoda &neArr;](https://www.katacoda.com/infuseai), it helps understand the installation progress/requirements and what PrimeHub CE is capable of.


### Setup Kubernetes for PrimeHub

Before PrimeHub installation, A Kubernetes cluster is required to meet prerequisites. Make sure your cluster is ready for PrimeHub.

- [Prerequisites](getting_started/prerequisites.md)

If PrimeHub on GKE/EKS is one of your preference, you may want to start from our guides to set up a PrimeHub-ready-Kubernetes:

- [Install Kubernetes on GKE](getting_started/kubernetes_on_gke.md)
- [Install Kubernetes on AWS EKS](getting_started/kubernetes_on_eks)

### Setup PrimeHub

- [Install PrimeHub Community](getting_started/install_primehub_ce)
- [Install PrimeHub Enterprise](getting_started/install_primehub)

#### Single Node

Just want to have PrimeHub on the own desktop PC/laptop PC? you may want to check the installation on single-node(easy-installation).

- [Install PrimeHub Community on Single Node (Ubuntu)](getting_started/kubernetes_on_ubuntu_ce)
- [Install PrimeHub Enterprise on Single Node (Ubuntu)](getting_started/kubernetes_on_ubuntu_machine)

---

## Enterprising Trial

If an enterprising trial is preferred, please send the [request](https://docs.google.com/forms/d/e/1FAIpQLSe_Z8JfIbYnvhOampGN_XXle4d3GVX04E8evnNI_Py3abth-A/viewform). We will have a PrimeHub cloud dedicated to your trial.